--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- Header -->
  <header class="header">
-  <div class="header-div">
+  <div class="header-div-container">
     ㅤㅤ<a href="#" class="logo"><span>Web</span>Studio</a>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
     <nav class="nav">
       <ul class="nav-list">
