--- a/index.html
+++ b/index.html
@@ -61,7 +61,15 @@
       </ul>
     </div>
   </section>
+ 
+  <section class = " Our team">
 
+
+
+
+
+    
+  </section>
   <!-- Footer -->
   <footer class="footer">
     <div class="foot">
