--- a/index.html
+++ b/index.html
@@ -62,13 +62,41 @@
     </div>
   </section>
  
-  <section class = " Our team">
+    <section class="team-section">
+    <h2>Наша команда</h2>
+    <div class="team-container">
+      <div class="team-member">
+        <img src="" alt="Ігор Дем'яненко">
+        <div class="team-info">
+          <h3>Ігор Дем'яненко</h3>
+          <p>Product Designer</p>
+        </div>
+      </div>
 
+      <div class="team-member">
+        <img src="" alt="Ольга Рєпіна">
+        <div class="team-info">
+          <h3>Ольга Рєпіна</h3>
+          <p>Frontend Developer</p>
+        </div>
+      </div>
 
+      <div class="team-member">
+        <img src="" alt="Микола Тарасов">
+        <div class="team-info">
+          <h3>Микола Тарасов</h3>
+          <p>Marketing</p>
+        </div>
+      </div>
 
-
-
-    
+      <div class="team-member">
+        <img src="" alt="Михайло Єрмаков">
+        <div class="team-info">
+          <h3>Михайло Єрмаков</h3>
+          <p>UI Designer</p>
+        </div>
+      </div>
+    </div>
   </section>
   <!-- Footer -->
   <footer class="footer">
