--- a/index.html
+++ b/index.html
@@ -4,31 +4,32 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WebStudio</title>
-  <link rel = "stylesheet" href = "normaliza.css">
+  <link rel="stylesheet" href="normaliza.css">
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Header -->
- <header class="header">
-  <div class="header-div">
-    ㅤㅤ<a href="#" class="logo"><span>Web</span>Studio</a>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
-    <nav class="nav">
-      <ul class="nav-list">
-        <li><a href="#" class="nav-link current">Студія</a></li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
-        <li><a href="https://nik-kul.github.io/Portfolio/" class="nav-link">Портфоліо</a></li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
-        <li><a href="#" class="nav-link">Контакти</a></li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
-      </ul>
-    </nav>
+  <header class="header">
+    <div class="container header-div">
+      <a href="index.html" class="logo"><span>Web</span>Studio</a>
 
-    <ul class="contacts">
-      <li><a class = "gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤ
-      <li><a class = "tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-  </div>
-</header>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li><a href="index.html" class="nav-link current">Студія</a></li>
+          <li><a href="portfolio.html" class="nav-link">Портфоліо</a></li>
+          <li><a href="#" class="nav-link">Контакти</a></li>
+        </ul>
+      </nav>
+
+      <ul class="contacts">
+        <li><a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </div>
+  </header>
 
   <!-- Hero section -->
   <section class="hero">
@@ -42,71 +43,72 @@
   <section class="features section">
     <div class="container">
       <ul class="features-list">
-        <li class = "features-list-li">
+        <li class="features-list-li">
           <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
           <p class="feature-text">Ідейні міркування, а також початок повсякденної роботи.</p>
         </li>
-        <li class = "features-list-li">
+        <li class="features-list-li">
           <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
           <p class="feature-text">Завдання організації, особливо рамки і місце навчання.</p>
         </li>
-        <li class = "features-list-li">
+        <li class="features-list-li">
           <h3 class="feature-title">ПЛАНУВАННЯ</h3>
           <p class="feature-text">Так само консультація з широким активом значною мірою.</p>
         </li>
-        <li class = "features-list-li">
+        <li class="features-list-li">
           <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
           <p class="feature-text">Значимість цих проблем настільки очевидна.</p>
         </li>
       </ul>
     </div>
   </section>
- 
-    <section class="team-section">
-    <h2>Наша команда</h2>
-    <div class="team-container">
-      <div class="team-member">
-        <img src="" alt="Ігор Дем'яненко">
-        <div class="team-info">
-          <h3>Ігор Дем'яненко</h3>
-          <p>Product Designer</p>
-        </div>
-      </div>
 
-      <div class="team-member">
-        <img src="" alt="Ольга Рєпіна">
-        <div class="team-info">
-          <h3>Ольга Рєпіна</h3>
-          <p>Frontend Developer</p>
+  <!-- Team -->
+  <section class="team-section section">
+    <div class="container">
+      <h2 class="team-title">Наша команда</h2>
+      <div class="team-container">
+        <div class="team-member">
+          <img src="images/team1.jpg" alt="Ігор Дем'яненко">
+          <div class="team-info">
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </div>
         </div>
-      </div>
-
-      <div class="team-member">
-        <img src="" alt="Микола Тарасов">
-        <div class="team-info">
-          <h3>Микола Тарасов</h3>
-          <p>Marketing</p>
+        <div class="team-member">
+          <img src="images/team2.jpg" alt="Ольга Рєпіна">
+          <div class="team-info">
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </div>
         </div>
-      </div>
-
-      <div class="team-member">
-        <img src="" alt="Михайло Єрмаков">
-        <div class="team-info">
-          <h3>Михайло Єрмаков</h3>
-          <p>UI Designer</p>
+        <div class="team-member">
+          <img src="images/team3.jpg" alt="Микола Тарасов">
+          <div class="team-info">
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </div>
+        </div>
+        <div class="team-member">
+          <img src="images/team4.jpg" alt="Михайло Єрмаков">
+          <div class="team-info">
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </div>
         </div>
       </div>
     </div>
   </section>
+
   <!-- Footer -->
   <footer class="footer">
-    <div class="foot">
-      <a href="#" class="logo"><span>Web</span>Studio</a>
-      <address class = "footer-adress">
+    <div class="container foot">
+      <a href="index.html" class="logo"><span>Web</span>Studio</a>
+      <address class="footer-adress">
         <ul class="footer-contacts">
-          <li class = "footer-contacts-li">м. Київ, пр-т Лесі Українки, 26</li>
-          <li><a class = "footer-contacts-li-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class = "footer-contacts-li-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="footer-contacts-li">м. Київ, пр-т Лесі Українки, 26</li>
+          <li><a class="footer-contacts-li-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="footer-contacts-li-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </div>
