--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div class="container">
       <ul class="features-list">
         <li class="features-list-li">
+          <h2 style= "text-aling: center;">Чим ми займаємося</h2>
           <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
           <p class="feature-text">Ідейні міркування, а також початок повсякденної роботи.</p>
         </li>
