--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav class="nav">
         <ul class="nav-list">
           <li><a href="index.html" class="nav-link current">Студія</a></li>
-          <li><a href="portfolio.html" class="nav-link">Портфоліо</a></li>
+          <li><a href="https://nik-kul.github.io/Portfolio/" class="nav-link">Портфоліо</a></li>
           <li><a href="#" class="nav-link">Контакти</a></li>
         </ul>
       </nav>
