--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
           </div>
         </div>
         <div class="team-member">
-          <img src="images/team3.jpg" alt="Микола Тарасов">
+          <img src="photo_2025-09-11_19-47-11.jpg" alt="Микола Тарасов">
           <div class="team-info">
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </div>
         </div>
         <div class="team-member">
-          <img src="images/team4.jpg" alt="Михайло Єрмаков">
+          <img src="photo_2025-09-11_19-47-11.jpg" alt="Михайло Єрмаков">
           <div class="team-info">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
