--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
       <h2 class="team-title">Наша команда</h2>
       <div class="team-container">
         <div class="team-member">
-          <img src="images/team1.jpg" alt="Ігор Дем'яненко">
+          <img src="photo_2025-09-11_19-46-07.jpg" alt="Ігор Дем'яненко">
           <div class="team-info">
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </div>
         </div>
         <div class="team-member">
-          <img src="images/team2.jpg" alt="Ольга Рєпіна">
+          <img src="photo_2025-09-11_19-47-11.jpg" alt="Ольга Рєпіна">
           <div class="team-info">
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="team-member">
-          <img src="photo_2025-09-11_19-47-11.jpg" alt="Михайло Єрмаков">
+          <img src="photo_2025-09-11_19-46-07.jpg" alt="Михайло Єрмаков">
           <div class="team-info">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
