--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <!-- Team -->
   <section class="team-section section">
     <div class="container">
-      <h2 class="team-title">Наша команда</h2>
+      <h2 class="team-title" style="text-align: center;">Наша команда</h2>
       <div class="team-container">
         <div class="team-member">
           <img src="photo_2025-09-11_19-46-07.jpg" alt="Ігор Дем'яненко">
