--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section class="features section">
     <div class="container">
       <ul class="features-list">
-        <h2 style = "text-align: center;">
+        <h2 style = "text-align: center;">HI</h2>
         <li class="features-list-li">
           <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
           <p class="feature-text">Ідейні міркування, а також початок повсякденної роботи.</p>
