--- a/index.html
+++ b/index.html
@@ -41,47 +41,32 @@
   <br>
   <br>
    <h2 style = "text-align: center;">Чим ми займаємося</h2>
-  <!-- Features -->
- <br>   <h2 style = "text-align: center;">Чим ми займаємося</h2> 
-  <!-- Features -->  <section class="features section">
+  <!-- Features -->  
+  <section class="features section">
     <div class="container"> 
       <ul class="features-list">
-        <li class="features-list-li">
+        <img src = "photo_2025-09-14_12-33-14.jpg" alt = "img">
+        <br>   <h2 style = "text-align: center;">
           <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
           <p class="feature-text">Ідейні міркування, а також початок повсякденної роботи.</p>
-        </li>        
+        </li>   
+          <img src = "photo_2025-09-14_12-33-11.jpg" alt = "img">
         <li class="features-list-li">         
           <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>          
           <p class="feature-text">Завдання організації, особливо рамки і місце навчання.</p>        
         </li>      
+        <img src = "photo_2025-09-14_12-33-07.jpg" alt = "img">
         <li class="features-list-li">         
           <h3 class="feature-title">ПЛАНУВАННЯ</h3>          
           <p class="feature-text">Так само консультація з широким активом значною мірою.</p>        
         </li>        
+          <img src = "photo_2025-09-14_12-33-03.jpg" alt = "img">
         <li class="features-list-li">          
           <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>         
           <p class="feature-text">Значимість цих проблем настільки очевидна.</p>       
         </li>      
-      </ul> <div class="feature">      
-        <img src="icon1.png" alt="Увага до деталей">     
-        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>      
-        <p>Ідейні міркування, а також початок повсякденної роботи з формування позиції.</p>    
-      </div>    
-      <div class="feature">      
-        <img src="icon2.png" alt="Пунктуальність">     
-        <h3>ПУНКТУАЛЬНІСТЬ</h3>      
-        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>    
-      </div>   
-      <div class="feature">      
-        <img src="icon3.png" alt="Планування">     
-        <h3>ПЛАНУВАННЯ</h3>     
-        <p>Так само консультація з широким активом значною мірою зумовлює.</p>   
-      </div>   
-      <div class="feature">      
-        <img src="icon4.png" alt="Сучасні технології">      
-        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>      
-        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>    
-      </div>  
+      </ul>
+    </div>
   </section>
   <!-- Team -->
   <section class="team-section section">
