--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
   <section class="features section">
     <div class="container"> 
       <ul class="features-list">
-        <img src = "photo_2025-09-14_12-33-14.jpg" alt = "img">
+        <img src = "photo_2025-09-14_12-33-14.jpg" alt = "img" style = "size: 10px;">
         <br>   <h2 style = "text-align: center;">
           <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
           <p class="feature-text">Ідейні міркування, а також початок повсякденної роботи.</p>
         </li>   
-          <img src = "photo_2025-09-14_12-33-11.jpg" alt = "img">
+          <img src = "photo_2025-09-14_12-33-11.jpg" alt = "img" style = "size: 10px;">
         <li class="features-list-li">         
           <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>          
           <p class="feature-text">Завдання організації, особливо рамки і місце навчання.</p>        
         </li>      
-        <img src = "photo_2025-09-14_12-33-07.jpg" alt = "img">
+        <img src = "photo_2025-09-14_12-33-07.jpg" alt = "img" style = "size: 10px;">
         <li class="features-list-li">         
           <h3 class="feature-title">ПЛАНУВАННЯ</h3>          
           <p class="feature-text">Так само консультація з широким активом значною мірою.</p>        
         </li>        
-          <img src = "photo_2025-09-14_12-33-03.jpg" alt = "img">
+          <img src = "photo_2025-09-14_12-33-03.jpg" alt = "img" style = "size: 10px;">
         <li class="features-list-li">          
           <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>         
           <p class="feature-text">Значимість цих проблем настільки очевидна.</p>       
