--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <section class="features section">
     <div class="container"> 
       <ul class="features-list">
+        <li class = "feature-list-li">
           <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
           <p class="feature-text">Ідейні міркування, а також початок повсякденної роботи.</p>
         </li>   
