--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
        <h2 style = "text-align: center;">Чим ми займаємося</h2>
     <div class="container"> 
       <ul class="features-list">
-        <li class = "feature-list-li">
+        <li class = "features-list-li">
           <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
           <p class="feature-text">Ідейні міркування, а також початок повсякденної роботи.</p>
         </li>   
