--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <body>
   <!-- Header -->
   <header class="header">
+    <span>ENG</span>
+    <label class ="switch">
+      <input type ="checkbox">
+    </label>
+    <span class ="slider">UA</span>
+  </div>
     <div class="container header-div">
       <a href="index.html" class="logo"><span>Web</span>Studio</a>
 
