--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <!-- Hero section -->
   <section class="hero">
     <div class="container">
+      <svg class="icon icon-envelope-hover"><use xlink:href="#icon-envelope-hover"></use></svg>
       <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
       <button class="hero-button">Замовити послугу</button>
     </div>
