--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebStudio</title>
+  <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="normaliza.css">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
@@ -25,6 +26,7 @@
       </nav>
 
       <ul class="contacts">
+        <i class = "icon icon-envelope-hover"></i>
         <li><a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
