--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
 
       <ul class="contacts">
-        <i class = "icon icon-envelope-hover"></i>
+        <i class = "icon icon-Social-links"></i>
         <li><a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
