--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
       <ul class="contacts">
         <i class = "icon icon-Social-links"></i>
+        <svg><use>href = "icon-envelope-hover"</use></svg>
         <li><a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
