--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li><a href="#" class="nav-link">Контакти</a></li>
         </ul>
       </nav>
+      <svg><use href = "/symbol-defs.svg#icon-envelope-hover"></use></svg>
         <li><a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
