--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <li>
-      <svg><use href = "/symbol-defs.svg#icon-envelope-hover"></use></svg>
+      <svg><use href = "symbol-defs.svg#icon-envelope-hover"></use></svg>
       </li>
         <li><a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
