--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <nav class="nav">
         <ul class="nav-list">
           <li><a href="index.html" class="nav-link current">Студія</a></li>
-          <li><a href="https://nik-kul.github.io/Portfolio/" class="nav-link">Портфоліо</a></li>
+          <li><a href="https://nik-kul.github.io/Portfolio/"class="nav-link">Портфоліо</a></li>
           <li><a href="#" class="nav-link">Контакти</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li> <svg><use href = "./symbol-defs.svg#icon-Vector"></use></svg><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li> <svg class = "start"><use href = "./symbol-defs.svg#icon-envelope-hover"></use></svg> <a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li> <svg class = "start"><use href = "./symbol-defs.svg#icon-Vector"></use></svg><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </div>
   </header>
