--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
    
   <!-- Features -->  
   <section class="features section">
-       <h2 style = "text-align: center;">Чим ми займаємося</h2>
     <div class="container"> 
       <ul class="features-list">
         <li class = "features-list-li">
@@ -67,6 +66,38 @@
       </ul>
     </div>
   </section>
+<section class="WhatDoWeDo">
+        <div class="container WhatDoWeDo-section-container">
+          <h2 class="WhatDoWeDo-section-h2">Чим ми займаємося</h2>
+          <ul class="WhatDoWeDo-section-list">
+            <li class="WhatDoWeDo-section-list-items">
+              <img
+                src="./images/img (6).jpg"
+                alt="img"
+                class="WhatDoWeDo-section-img-list-items"
+              />
+              <p class="WhatDoWeDo-p-list-items"><span>Десктопні додатки</span></p>
+            </li>
+            <li class="WhatDoWeDo-section-list-items">
+              <img
+                src="./images/box 2.jpg"
+                alt="img"
+                class="WhatDoWeDo-section-img-list-items"
+              />
+              <p class="WhatDoWeDo-p-list-items"><span>Мобільні додатки</span></p>
+            </li>
+            <li class="WhatDoWeDo-section-list-items">
+              <img
+                src="./images/img (4) (2).jpg"
+                alt="img"
+                class="WhatDoWeDo-section-img-list-items"
+              />
+              <p class="WhatDoWeDo-p-list-items"><span>Дизайнерські рішення</span></p>
+            </li>
+          </ul>
+        </div>
+      </section>
+  
   <!-- Team -->
   <section class="team-section section">
     <div class="container">
