--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <ul class="WhatDoWeDo-section-list">
             <li class="WhatDoWeDo-section-list-items">
               <img
-                src="./images/img (6).jpg"
+                src="8dac6a22eff34a388bbc6409758a002e5a58c3ca.jpg"
                 alt="img"
                 class="WhatDoWeDo-section-img-list-items"
               />
@@ -80,7 +80,7 @@
             </li>
             <li class="WhatDoWeDo-section-list-items">
               <img
-                src="./images/box 2.jpg"
+                src="01590214fe209b7db875477ca0f844823574082d.jpg"
                 alt="img"
                 class="WhatDoWeDo-section-img-list-items"
               />
@@ -88,7 +88,7 @@
             </li>
             <li class="WhatDoWeDo-section-list-items">
               <img
-                src="./images/img (4) (2).jpg"
+                src="4ca103f5ff490664ba91f138b9f708e01d65306a.jpg"
                 alt="img"
                 class="WhatDoWeDo-section-img-list-items"
               />
