--- a/index.html
+++ b/index.html
@@ -99,42 +99,210 @@
       </section>
   
   <!-- Team -->
-  <section class="team-section section">
-    <div class="container">
-      <h2 class="team-title" style="text-align: center;">Наша команда</h2>
-      <div class="team-container">
-        <div class="team-member">
-          <img src="photo_2025-09-11_19-46-32.jpg" alt="Ігор Дем'яненко">
-          <div class="team-info">
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
-          </div>
-        </div>
-        <div class="team-member">
-          <img src="photo_2025-09-11_19-47-06.jpg" alt="Ольга Рєпіна">
-          <div class="team-info">
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
-          </div>
-        </div>
-        <div class="team-member">
-          <img src="photo_2025-09-11_19-47-11.jpg" alt="Микола Тарасов">
-          <div class="team-info">
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
-          </div>
-        </div>
-        <div class="team-member">
-          <img src="photo_2025-09-11_19-46-07.jpg" alt="Михайло Єрмаков">
-          <div class="team-info">
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <section class="OurTeam">
+        <div class="container OurTeam-section-container">
+          <h2 class="OurTeam-section-h2">Наша команда</h2>
+          <ul class="OurTeam-section-list">
+            <li class="OurTeam-section-list-items">
+              <img
+                src="photo_2025-09-11_19-46-07.jpg"
+                alt="img"
+                class="OurTeam-section-img-items"
+              />
+              <h3 class="OurTeam-section-h3-items">Ігор Дем'яненко</h3>
+              <p class="OurTeam-section-p-items">Product Designer</p>
+                                  <ul class="social-networks-list">
+        <li class="social-network-circle">
+          <a href="" >
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-instagram-2"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-twitter-1"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-facebook-1"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-linkedin-1"></use>
+          </svg>
+          </a>
+        </li>
+      </ul>
+            </li>
+            <li class="OurTeam-section-list-items">
+              <img
+                src="photo_2025-09-11_19-47-06.jpg"
+                alt="img"
+                class="OurTeam-section-img-items"
+              />
+              <h3 class="OurTeam-section-h3-items">Ольга Рєпіна</h3>
+              <p class="OurTeam-section-p-items">Frontend Developer</p>
+                                  <ul class="social-networks-list">
+        <li class="social-network-circle">
+          <a href="" >
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-instagram-2"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-twitter-1"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-facebook-1"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-linkedin-1"></use>
+          </svg>
+          </a>
+        </li>
+      </ul>
 
+            </li>
+            <li class="OurTeam-section-list-items">
+              <img
+                src="photo_2025-09-11_19-47-11.jpg"
+                alt="img"
+                class="OurTeam-section-img-items"
+              />
+              <h3 class="OurTeam-section-h3-items">Микола Тарасов</h3>
+              <p class="OurTeam-section-p-items">Marketing</p>
+                                  <ul class="social-networks-list">
+        <li class="social-network-circle">
+          <a href="" >
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-instagram-2"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-twitter-1"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-facebook-1"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-linkedin-1"></use>
+          </svg>
+          </a>
+        </li>
+      </ul>
+
+            </li>
+            <li class="OurTeam-section-list-items">
+              <img
+                src="photo_2025-09-11_19-46-32.jpg"
+                alt="img"
+                class="OurTeam-section-img-items"
+              />
+              <h3 class="OurTeam-section-h3-items">Михайло Єрмаков</h3>
+              <p class="OurTeam-section-p-items">UI Designer</p>
+                    <ul class="social-networks-list">
+        <li class="social-network-circle">
+          <a href="" >
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-instagram-2"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-twitter-1"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-facebook-1"></use>
+          </svg>
+          </a>
+        </li>
+        <li class="social-network-circle">
+          <a href="">
+          <svg class="social-network OurTeam-social-network">
+            <use href="./svg/symbol-defs.svg#icon-linkedin-1"></use>
+          </svg>
+          </a>
+        </li>
+      </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="regular-customers">
+        <h2 class="regular-customers-h2">Постійні клієнти</h2>
+        <ul class="regular-customers-list">
+          <li class="regular-customers-list-items 1">
+            <svg class="first-customer customer">
+            <use href="./svg/symbol-defs.svg#icon-group"></use>
+          </svg>
+        </li>
+          <li class="regular-customers-list-items">
+            <svg class="second-customer customer">
+            <use href="./svg/symbol-defs.svg#icon-group-1"></use>
+          </svg>
+        </li>
+          <li class="regular-customers-list-items">
+            <svg class="third-customer customer">
+            <use href="./svg/symbol-defs.svg#icon-group-2"></use>
+          </svg>
+        </li>
+          <li class="regular-customers-list-items">
+            <svg class="fourth-customer customer">
+            <use href="./svg/symbol-defs.svg#icon-group-3"></use>
+          </svg>
+        </li>
+          <li class="regular-customers-list-items">
+            <svg class="fifth-customer customer">
+            <use href="./svg/symbol-defs.svg#icon-group-4"></use>
+          </svg>
+        </li>
+        <a href="">        
+          <li class="regular-customers-list-items">
+            <svg class="sixth-customer customer">
+            <use href="./svg/symbol-defs.svg#icon-group-5"></use>
+          </svg>
+        </li>
+        </a>
+        </ul>
+      </section>
+    </main>
   <!-- Footer -->
   <footer class="footer">
     <div class="container foot">
