--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </div>
+        </div>
+      </div>
+    </div>
+ </section>
 
       <section class="regular-customers">
         <h2 class="regular-customers-h2">Постійні клієнти</h2>
