--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
   <footer class="footer">
     <div class="container foot">
       <a href="index.html" class="logo"><span>Web</span>Studio</a>
+      <h4 style = "text-align:center;">Приєднуйтесь</h4>
+       <svg class="second-customer customer">
+            <use href="./symbol-defs.svg#icon-Social-links"></use>
+          </svg>
       <address class="footer-adress">
         <ul class="footer-contacts">
           <li class="footer-contacts-li">м. Київ, пр-т Лесі Українки, 26</li>
