--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
         <li class = "features-list-li">
           <img src="photo_2025-09-14_12-33-03.jpg" alt="ghghgh" width="250px">
           <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p class="feature-text">Ідейні міркування, а також початок повсякденної роботи.</p>
+          <p class="feature-text">Ідейні міркування, і навіть початок<br> повсякденної роботи з формування<br> позиції.</p>
         </li>   
         <li class="features-list-li">  
           <img src="photo_2025-09-14_12-33-07.jpg" alt="ghghgh" width="250px">
           <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>          
-          <p class="feature-text">Завдання організації, особливо рамки і місце навчання.</p>        
+          <p class="feature-text">Завдання організації, особливо рамки<br> і місце навчання кадрів тягне у себе.</p>        
         </li>      
         <li class="features-list-li">     
           <img src="photo_2025-09-14_12-33-11.jpg" alt="ghghgh" width="250px">
           <h3 class="feature-title">ПЛАНУВАННЯ</h3>          
-          <p class="feature-text">Так само консультація з широким активом значною мірою.</p>        
+          <p class="feature-text">Так само консультація з широким <br> активом значною мірою зумовлює.</p>        
         </li>        
         <li class="features-list-li">  
           <img src="photo_2025-09-14_12-33-14.jpg" alt="ghghgh" width="250px">
           <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>         
-          <p class="feature-text">Значимість цих проблем настільки очевидна.</p>       
+          <p class="feature-text">Значимість цих проблем настільки<br> очевидна, що реалізація планових<br> завдань.</p>       
         </li>      
       </ul>
     </div>
