--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           <li><a href="https://nik-kul.github.io/Portfolio/"class="nav-link">Портфоліо</a></li>
           <li><a href="#" class="nav-link">Контакти</a></li>
         </ul>
-      </nav>
-      <ul class = "head-gmail-phone">
+      <ul class = "nav-list">
         <li> <svg class = "header-svg-items"><use href = "./symbol-defs.svg#icon-envelope-hover"></use></svg> <a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       </ul>
-      <ul class = "head-gmail-phone">
+      <ul class = "nav-list">
         <li> <svg class = "header-svg-items"><use href = "./symbol-defs.svg#icon-Vector"></use></svg><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
+      </nav>
     </div>
   </header>
 
