--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
             <use href="./symbol-defs.svg#icon-Client-1"></use>
           </svg>
         </li>
+        </ul>
+        <ul class="regular-customers-list">
           <li class="regular-customers-list-items">
             <svg class="second-customer customer">
             <use href="./symbol-defs.svg#icon-Client-2"></use>
@@ -156,23 +158,26 @@
             <use href="./symbol-defs.svg#icon-Client-3"></use>
           </svg>
         </li>
+        </ul>
+        <ul class="regular-customers-list">
           <li class="regular-customers-list-items">
             <svg class="fourth-customer customer">
             <use href="./symbol-defs.svg#icon-Client-4"></use>
           </svg>
         </li>
+        </ul>
           <li class="regular-customers-list-items">
             <svg class="fifth-customer customer">
             <use href="./symbol-defs.svg#icon-Client-5"></use>
           </svg>
         </li>
-        <a href="">        
+        <ul class="regular-customers-list">
           <li class="regular-customers-list-items">
             <svg class="sixth-customer customer">
             <use href="./symbol-defs.svg#icon-Client-6"></use>
           </svg>
         </li>
-        </a>
+        <ul>
         </ul>
       </section>
     </main>
