--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
           <li><a href="#" class="nav-link">Контакти</a></li>
         </ul>
       </nav>
-      <ul class = "head-ul">
+      <ul class = "hedul">
         <li> <svg class = "header-svg-items"><use href = "./symbol-defs.svg#icon-envelope-hover"></use></svg> <a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       </ul>
-      <ul class = "head-ul">
+      <ul class = "hedul">
         <li> <svg class = "header-svg-items"><use href = "./symbol-defs.svg#icon-Vector"></use></svg><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </div>
