--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <use href="./symbol-defs.svg#icon-Client-2"></use>
           </svg>
         </li>
-          <li>
+          <li class="regular-customers-list-items">
             <svg class="third-customer customer">
             <use href="./symbol-defs.svg#icon-Client-3"></use>
           </svg>
