--- a/index.html
+++ b/index.html
@@ -142,32 +142,32 @@
         <h2 class="regular-customers-h2">Постійні клієнти</h2>
         <ul class="regular-customers-list">
           <li class="regular-customers-list-items 1">
-            <svg class="first-customer customer">
+            <svg class="custom first-customer customer">
             <use href="./symbol-defs.svg#icon-Client-1"></use>
           </svg>
         </li>
           <li class="regular-customers-list-items">
-            <svg class="second-customer customer">
+            <svg class="custom second-customer customer">
             <use href="./symbol-defs.svg#icon-Client-2"></use>
           </svg>
         </li>
           <li class="regular-customers-list-items">
-            <svg class="third-customer customer">
+            <svg class="custom third-customer customer">
             <use href="./symbol-defs.svg#icon-Client-3"></use>
           </svg>
         </li>
           <li class="regular-customers-list-items">
-            <svg class="fourth-customer customer">
+            <svg class="custom fourth-customer customer">
             <use href="./symbol-defs.svg#icon-Client-4"></use>
           </svg>
           </li>
           <li class="regular-customers-list-items">
-            <svg class="fifth-customer customer">
+            <svg class="custom fifth-customer customer">
             <use href="./symbol-defs.svg#icon-Client-5"></use>
           </svg>
         </li>
           <li class="regular-customers-list-items">
-            <svg class="sixth-customer customer">
+            <svg class="custom sixth-customer customer">
             <use href="./symbol-defs.svg#icon-Client-6"></use>
           </svg>
         </li>
