--- a/index.html
+++ b/index.html
@@ -143,32 +143,32 @@
         <ul class="regular-customers-list">
           <li class="custom regular-customers-list-items 1">
             <svg class="custom first-customer customer">
-            <use href="./symbol-defs.svg#icon-Client-1"></use>
+            <use class = "custom" href="./symbol-defs.svg#icon-Client-1"></use>
           </svg>
         </li>
           <li class="custom regular-customers-list-items">
             <svg class="custom second-customer customer">
-            <use href="./symbol-defs.svg#icon-Client-2"></use>
+            <use class = "custom" href="./symbol-defs.svg#icon-Client-2"></use>
           </svg>
         </li>
           <li class="custom regular-customers-list-items">
             <svg class="custom third-customer customer">
-            <use href="./symbol-defs.svg#icon-Client-3"></use>
+            <use class = "custom" href="./symbol-defs.svg#icon-Client-3"></use>
           </svg>
         </li>
           <li class="custom regular-customers-list-items">
             <svg class="custom fourth-customer customer">
-            <use href="./symbol-defs.svg#icon-Client-4"></use>
+            <use class = "custom" href="./symbol-defs.svg#icon-Client-4"></use>
           </svg>
           </li>
           <li class="custom regular-customers-list-items">
             <svg class="custom fifth-customer customer">
-            <use href="./symbol-defs.svg#icon-Client-5"></use>
+            <use class = "custom" href="./symbol-defs.svg#icon-Client-5"></use>
           </svg>
         </li>
           <li class="custom regular-customers-list-items">
             <svg class="custom sixth-customer customer">
-            <use href="./symbol-defs.svg#icon-Client-6"></use>
+            <use class = "custom" href="./symbol-defs.svg#icon-Client-6"></use>
           </svg>
         </li>
         </ul>
