--- a/index.html
+++ b/index.html
@@ -141,11 +141,13 @@
       <section class="regular-customers">
         <h2 class="regular-customers-h2">Постійні клієнти</h2>
         <ul class="regular-customers-list">
+          <div class = "box">
           <li class="custom regular-customers-list-items 1">
             <svg class="custom first-customer customer">
             <use class = "custom" href="./symbol-defs.svg#icon-Client-1"></use>
           </svg>
         </li>
+        </div>
           <li class="custom regular-customers-list-items">
             <svg class="custom second-customer customer">
             <use class = "custom" href="./symbol-defs.svg#icon-Client-2"></use>
