--- a/index.html
+++ b/index.html
@@ -148,31 +148,41 @@
           </svg>
         </li>
         </div>
+          <div class = "box">
           <li class="custom regular-customers-list-items">
             <svg class="custom second-customer customer">
             <use class = "custom" href="./symbol-defs.svg#icon-Client-2"></use>
           </svg>
         </li>
+          </div>
+          <div class = "box">
           <li class="custom regular-customers-list-items">
             <svg class="custom third-customer customer">
             <use class = "custom" href="./symbol-defs.svg#icon-Client-3"></use>
           </svg>
         </li>
+          </div>
+            <div class = "box">
           <li class="custom regular-customers-list-items">
             <svg class="custom fourth-customer customer">
             <use class = "custom" href="./symbol-defs.svg#icon-Client-4"></use>
           </svg>
           </li>
+            </div>
+              <div class = "box">
           <li class="custom regular-customers-list-items">
             <svg class="custom fifth-customer customer">
             <use class = "custom" href="./symbol-defs.svg#icon-Client-5"></use>
           </svg>
         </li>
+            </div>
+          <div class = "box">
           <li class="custom regular-customers-list-items">
             <svg class="custom sixth-customer customer">
             <use class = "custom" href="./symbol-defs.svg#icon-Client-6"></use>
           </svg>
         </li>
+          </div>
         </ul>
       </section>
     </main>
